# kytea

./: .gitignore  CMakeLists.txt  project.json
cmake/: Config.cmake.in
data/: CMakeLists.txt
src/: CMakeLists.txt
src/api/: CMakeLists.txt
src/include/kytea/: config.h  kytea-config.h  kytea-dspec.h  kytea-lm.h  kytea-model.h  kytea-string.h  kytea-struct.h  kytea-util.h  kytea.h  string-util.h
src/lib/: CMakeLists.txt
src/lib/liblinear/: CMakeLists.txt
src/test/: CMakeLists.txt
